# ccp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  HALL-OF-FAME.md  README.md  SECURITY.md  docker-compose.yml  install.sh
.github/workflows/: ci.yml
crates/client/: Cargo.toml  README.md
crates/client/src/: commands.rs  enrollment.rs  enrollment_structs.rs  enrollment_test.rs  lib.rs  main.rs  storage.rs  transport.rs  transport_helpers.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: auth_request.rs  database.rs  identity.rs  init-db.sql  init.rs  journal.rs  lib.rs  main.rs  message.rs  state.rs
crates/server/src/commands/: add_book.rs  add_entry.rs  add_shelf.rs  append_to_entry.rs  brief_me.rs  delete_entry.rs  delete_shelf.rs  export_bundle.rs  get_entry.rs  get_entry_at.rs  get_history.rs  import_bundle.rs  list_entries.rs  mod.rs  restore_deleted_entry.rs  revoke_client_cert.rs  search_books.rs  search_context.rs  search_deleted_entries.rs  search_entries.rs  search_helpers.rs  search_shelves.rs
crates/server/src/tests/: auth_request.rs  init.rs  state.rs
docker/: server-entrypoint.sh
docs/: client.md  droplet-format.md  server.md  tool-call-api.md
mcp/: README.md  pyproject.toml
mcp/src/ccp_mcp_server/: __init__.py  server.py
tests/: Cargo.toml  README.md  run.sh
tests/src/: harness.rs  lib.rs
tests/tests/: end_to_end.rs
