[package]
name = "ccp-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
once_cell = "1.21"
protocol = { path = "../crates/protocol" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", features = ["ring"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
server = { path = "../crates/server" }
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
uuid = { version = "1", features = ["v4"] }
