[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
getrandom = "0.2"
hmac = "0.12"
httparse = "1.9"
protocol = { path = "../protocol" }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", features = ["ring"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
socket2 = "0.5"
strsim = "0.11"
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
time = { version = "0.3", features = ["formatting", "macros"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }
x509-parser = "0.16"
